Fix uncollapse link and clicking on images
* Add collapsed image link text

* Prevent collapsed image from being partially hidden when hovering over

* Allow clicking on image node to open in new tab

* Open original media in new tab instead of canvas

* Update tests

* Make eslint happy

<rikaitan.link>N2Q0YWUwMDRmMTA3NjQ0MTYxNGYyOTFjYzgxMDU4MzI4ZjBlNDA4OQo=</rikaitan.link>

--- a/ext/css/display.css
+++ b/ext/css/display.css
@@ -833,7 +833,6 @@ button.action-button:active {
 .entry {
     padding: var(--entry-vertical-padding) var(--entry-horizontal-padding);
     position: relative;
-    content-visibility: auto;
     contain-intrinsic-height: auto 500px;
 }
 .entry+.entry {
